完成用户获取热门搜索关键词列表的接口以及测试