@@ -1,9 +1,13 @@
 package com.starshop.service.impl;
 
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.starshop.common.utils.CaffeineUtils;
 import com.starshop.mapper.ProductSearchKeywordMapper;
 import com.starshop.pojo.enums.CommonStatus;
 import com.starshop.pojo.entity.ProductSearchKeyword;
+import com.starshop.result.Result;
+import com.starshop.service.ProductSearchKeywordService;
+import jakarta.annotation.Resource;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.springframework.stereotype.Service;
 
@@ -13,20 +17,23 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
-public class ProductSearchKeywordServiceImpl extends ServiceImpl<ProductSearchKeywordMapper, ProductSearchKeyword> {
+public class ProductSearchKeywordServiceImpl extends ServiceImpl<ProductSearchKeywordMapper, ProductSearchKeyword> implements ProductSearchKeywordService {
+
+    @Resource
+    private CaffeineUtils caffeineUtils;
 
     /**
-     * 用户获取热门商品搜索关键词
-     * @param key
+     * 用户获取热门搜索关键词列表
      * @return
      */
-    public @Nullable List<String> getHotProductSearchKeywordListUser(String key) {
-        //在数据库中查询（条件满足为展示商品和为热门商品）
-        List<ProductSearchKeyword> list = lambdaQuery().eq(ProductSearchKeyword::getIsShow, CommonStatus.ACTIVE.getNumber())
-                .eq(ProductSearchKeyword::getIsHot, CommonStatus.ACTIVE.getNumber()).list();
-        if(Objects.isNull(list)){
-            return Collections.emptyList();
-        }
-        return list.stream().map(ProductSearchKeyword::getKeyword).collect(Collectors.toList());
+    @Override
+    public Result<?> getProductSearchKeywordListUser() {
+        //caffeine查询缓存
+        List<String> hotProductSearchKeyword = caffeineUtils.getHotProductSearchKeyword();
+        //打乱顺序
+        Collections.shuffle(hotProductSearchKeyword);
+        //查询5条数据
+        List<String> resultList = hotProductSearchKeyword.stream().limit(5).toList();
+        return Result.success(resultList);
     }
 }
